--- a/app/markusApacheDrive/markus/templates/student/marksPage.html.twig
+++ b/app/markusApacheDrive/markus/templates/student/marksPage.html.twig
@@ -2,12 +2,11 @@
 
 {% block title %} Szczegóły Oceny- Student{% endblock %}
 {% block body %}
-<table>
+<table class="table">
 <tr> <td>Ocena</td> <td>{{marks.marks}}</td> </tr>
 <tr> <td>Waga</td> <td>{{marks.weight}}</td> </tr>
 <tr> <td>Przedmiot</td> <td>{{marks.subject}}</td> </tr>
 <tr> <td>Nauczyciel</td> <td>{{marks.teacher}}</td> </tr>
-<tr> <td>Data</td> <td>{{marks.ts}}</td> </tr>
-
+<tr> <td>Data Dodania</td> <td>{{marks.ts}}</td> </tr>
 </table>
 {% endblock %}
