Poprawki w panelu admine w module ocen

--- a/app/markusApacheDrive/markus/templates/admin/marksClass.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/marksClass.html.twig
@@ -11,7 +11,7 @@
             <td>
             {% for k,m in v %}
             {% for valueM in m %}
-                <a href="{{path('markEditPageAdmin', {id:valueM.id})}}" target="_blank">
+                <a href="{{path('markEditPageAdmin', {id:valueM.id})}}">
                 {{marks(valueM.marks, valueM.subjectShortcut, valueM.weight, valueM.teacher)|raw}}</a>
             {% endfor %}
             {% endfor %}
