--- a/app/markusApacheDrive/markus/templates/admin/markEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/markEdit.html.twig
@@ -1,5 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
+{% block title %} Edytuj ocene - Admin{% endblock %}
 
 {% block body %}
 <form action="{{path('markSavePageAdmin',{id:id})}}" class="m-4" method="POST">
