--- a/app/markusApacheDrive/markus/templates/admin/studentEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/studentEdit.html.twig
@@ -3,10 +3,14 @@
 {% block body %}
 <div class="m-4"><a href="{{path('StudentAddAdmin')}}"><button class="button">Dodaj Ucznia</button></a></div>
     <table class="table">
-        <tr><th>Lp.</th><th>Klasa</th><th>#</th></tr>
+        <tr><th>Lp.</th><th>Student</th><th>#</th><th>#</th></tr>
         {% set i = 1 %}
         {% for v in students %}
-            <tr><td>{{i}}</td><td>{{v.name}} {{v.surname}}</td><td><a href="{{path('StudentEditAdmin',{id:v.id})}}">Edytuj Studenta</a></td></tr>
+            <tr>
+            <td>{{i}}</td><td>{{v.name}} {{v.surname}}</td>
+            <td><a href="{{path('StudentEditAdmin',{id:v.id})}}">Edytuj Studenta</a></td>
+            <td><a href="{{path('StudentAskDeleteAdmin',{id:v.id})}}">Usuń Studenta</a></td>
+            </tr>
         {% set i = i + 1 %}
         {% endfor %}
     </table>
