Zmiany w panelu nauczycieciela, usuniecie nadmiarowych zmiennej user z modulu admina

--- a/app/markusApacheDrive/markus/templates/admin/teacherEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/teacherEdit.html.twig
@@ -1,7 +1,7 @@
 {% extends "admin/base.html.twig" %}
 
 {% block body %}
-
+<div class="m-4"><a href="{{path('TeacherAddAdmin')}}"><button class="button">Dodaj Nauczyciela</button></a></div>
     <table class="table">
         <tr><th>Lp.</th><th>Nauczyciel</th><th>#</th><th>#</th></tr>
         {% set i = 1 %}
