Dodanie usuwanie ocen oraz nieobecności

--- a/app/markusApacheDrive/markus/templates/admin/absenceEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/absenceEdit.html.twig
@@ -44,5 +44,6 @@
 </table>
 
 <input class="form-control" type="submit" value="Zapisz" />
+<a href="{{path('AbsenceAskDeleteAdmin',{classId:classId,id:id})}}" class="mt-3 mb-3 list-group-item list-group-item-action bg-danger" style="text-align:center;color:#fff;">Usuń</a>
 </form>
 {% endblock %}
