--- a/app/markusApacheDrive/markus/templates/admin/markEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/markEdit.html.twig
@@ -32,5 +32,6 @@
 </select>
 <br />
 <input type="submit" value="Zapisz" class="form-control" />
+<a href="{{path('MarksAskDeleteAdmin',{id:id})}}" class="mt-3 mb-3 list-group-item list-group-item-action bg-danger" style="text-align:center;color:#fff;">Usuń</a>
 </form>
 {% endblock %}
