Dodanie CRUDa do obslugi przedmiotow

--- a/app/markusApacheDrive/markus/templates/admin/_partials/menu.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/_partials/menu.html.twig
@@ -17,6 +17,9 @@
                 <a class="nav-link" href="{{path('mainPageTeachersEditAdmin')}}">Nauczyciele</a>
             </li>
             <li class="navbar-item">
+                <a class="nav-link" href="{{path('mainPageSubjectsAdmin')}}">Przedmioty</a>
+            </li>
+            <li class="navbar-item">
                 <a class="nav-link" href="{{path('appLogout')}}">Wyloguj</a>
             </li>
         </ul>
