Zbiorcza aktualizacja, obsługa planu lekcji oraz CRUD dla obslug klas w szkole

--- a/app/markusApacheDrive/markus/templates/admin/_partials/menu.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/_partials/menu.html.twig
@@ -20,6 +20,9 @@
                 <a class="nav-link" href="{{path('mainPageSubjectsAdmin')}}">Przedmioty</a>
             </li>
             <li class="navbar-item">
+                <a class="nav-link" href="{{path('mainPageClassesAdmin')}}">Klasy</a>
+            </li>
+            <li class="navbar-item">
                 <a class="nav-link" href="{{path('appLogout')}}">Wyloguj</a>
             </li>
         </ul>
