--- a/app/markusApacheDrive/markus/templates/admin/index.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "admin/base.html.twig" %}
 
+{% block title %}<title>Strona Główna - Admin</title>{% endblock %}
+
 {% block body %}
 <h2> Cześć Adminie: </h2>
 {% endblock %}
