--- a/app/markusApacheDrive/markus/templates/admin/marks.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/marks.html.twig
@@ -1,5 +1,7 @@
 {% extends "admin/base.html.twig" %}
 
+{% block title %}<title>Oceny - wybór klasy - Admin</title>{% endblock %}
+
 {% block body %}
 <table class="table">
         <tr><th>Lp.</th><th>Klasa</th><th>#</th></tr>
