--- a/app/markusApacheDrive/markus/templates/admin/personAskDelete.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/personAskDelete.html.twig
@@ -1,5 +1,7 @@
 {% extends "admin/base.html.twig" %}
 
+{% block title %}<title>Usuń {{typ}} - Admin</title>{% endblock %}
+
 {% block body %}
 <div class="container m-3">
     {% if typ == 'studenta' or typ == 'nauczyciela' %}
