--- a/app/markusApacheDrive/markus/templates/mainSite/mainSite.twig
+++ b/app/markusApacheDrive/markus/templates/mainSite/mainSite.twig
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
+    <title>Marksus.pl - Strona Główna</title>
 </head>
 
 <body>
@@ -17,27 +18,24 @@
             <div class="col">
                 <p>Moduly</p>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        <li>Oceny.</li>
+                        <li>Nieobecności.</li>
+                        <li>Plan Lekcji.</li>
                     </ul>    
             </div>
             <div class="col">
                 <p>Zalety Dla Ucznia</p>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>        
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        <li>Prostota Obsługi.</li>        
+                        <li>Średnia Ważona.</li>
+                        <li>Plan zajęć.</li>
                     </ul>
             </div>
             <div class="col">
                 <p>Zalety Dla Szkoly</p>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>        
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>        
+                        <li>Średnia Ważona.</li>
+                        <li>Prostota zarządzania.</li>        
                     </ul>
             </div>
         </div>
