--- a/app/markusApacheDrive/markus/templates/teacher/index.html.twig
+++ b/app/markusApacheDrive/markus/templates/teacher/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "teacher/base.index.twig" %}
 
+{% block title %}<title>Strona Główna - Nauczyciel</title>{% endblock %}
+
 {% block body %}
 <h2> Cześć Nauczycielu: {{user.name}} {{user.surname}}</h2>
 {% endblock %}
