--- a/app/markusApacheDrive/markus/templates/teacher/marksClass.twig
+++ b/app/markusApacheDrive/markus/templates/teacher/marksClass.twig
@@ -1,5 +1,7 @@
 {% extends "teacher/base.index.twig" %}
 
+{% block title %}<title>Oceny - wybór klasy - Nauczyciel</title>{% endblock %}
+
 {% block body %}
     <table class="table">
         <tr><th>Lp.</th><th>Klasa</th><th>#</th><th>#</th></tr>
