--- a/app/markusApacheDrive/markus/templates/admin/marksClass.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/marksClass.html.twig
@@ -1,5 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
+{% block title %}<title>Podgląd ocen - Admin</title>{% endblock %}
 
 {% block body %}
 {% include "_partials/marksWeigth.html.twig" %}
