--- a/app/markusApacheDrive/markus/templates/admin/schoolClass.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/schoolClass.html.twig
@@ -1,5 +1,7 @@
 {% extends "admin/base.html.twig" %}
 
+{% block title %}<title>Klasa - Strona Główna - Admin</title>{% endblock %}
+
 {% block body %}
 <div class="m-4"><a href="{{path('ClassAddAdmin')}}"><button class="btn btn-success">Dodaj Klasę</button></a></div>
     <table class="table">
