--- a/app/markusApacheDrive/markus/templates/admin/schoolSubjectAdd.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/schoolSubjectAdd.html.twig
@@ -1,5 +1,7 @@
 {% extends "admin/base.html.twig" %}
 
+{% block title %}<title>Dodaj przedmiot - Admin</title>{% endblock %}
+
 {% block body %}
     <form action="{{path('SubjectAddSaveAdmin')}}" class="m-4" method="POST">
         <label for="name">Nazwa</label>
