--- a/app/markusApacheDrive/markus/templates/admin/studentEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/studentEdit.html.twig
@@ -1,7 +1,9 @@
 {% extends "admin/base.html.twig" %}
 
+{% block title %}<title>Student - Strona Główna - Admin</title>{% endblock %}
+
 {% block body %}
-<div class="m-4"><a href="{{path('StudentAddAdmin')}}"><button class="btn">Dodaj Ucznia</button></a></div>
+<div class="m-4"><a href="{{path('StudentAddAdmin')}}"><button class="btn">Dodaj Studenta</button></a></div>
     <table class="table">
         <tr><th>Lp.</th><th>Student</th><th>#</th><th>#</th></tr>
         {% set i = 1 %}
