--- a/app/markusApacheDrive/markus/templates/security/login.html.twig
+++ b/app/markusApacheDrive/markus/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Zaloguj się do Markusa`{% endblock %}
+{% block title %}Zaloguj się do Markusa{% endblock %}
 
 {% block body %}
 <style>
