Drobny fix w planie lekcji u studenta

--- a/app/markusApacheDrive/markus/templates/student/timeTable.twig
+++ b/app/markusApacheDrive/markus/templates/student/timeTable.twig
@@ -10,11 +10,11 @@
     <tr>
         <td>{{i}}</td>
         <td>{{value.rozpoczecie}} - {{value.koniec}}</td>
-        <td>{{plan.Poniedzialek[i].Przedmiot|default('')}}</td>
-        <td>{{plan.Wtorek[i].Przedmiot|default('')}}</td>
-        <td>{{plan.Sroda[i].Przedmiot|default('')}}</td>
-        <td>{{plan.Czwartek[i].Przedmiot|default('')}}</td>
-        <td>{{plan.Piatek[i].Przedmiot|default('')}}</td>
+        <td>{{plan.Poniedzialek[i].Subject|default('')}}</td>
+        <td>{{plan.Wtorek[i].Subject|default('')}}</td>
+        <td>{{plan.Sroda[i].Subject|default('')}}</td>
+        <td>{{plan.Czwartek[i].Subject|default('')}}</td>
+        <td>{{plan.Piatek[i].Subject|default('')}}</td>
         {% set i = i + 1 %}
     </tr>
     {% endfor %}
