Drobna Poprawka w tahach title

--- a/app/markusApacheDrive/markus/templates/admin/editTimetable.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/editTimetable.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Edytuj Plan Lekcji - Admin</title>{% endblock %}
+{% block title %}Edytuj Plan Lekcji - Admin{% endblock %}
 
 {% block body %}
 <form action="{{path('ClassSavePlanAdmin',{id})}}" method="POST">
