--- a/app/markusApacheDrive/markus/templates/admin/personAskDelete.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/personAskDelete.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Usuń {{typ}} - Admin</title>{% endblock %}
+{% block title %}Usuń {{typ}} - Admin{% endblock %}
 
 {% block body %}
 <div class="container m-3">
