--- a/app/markusApacheDrive/markus/templates/admin/schoolClassAdd.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/schoolClassAdd.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Dodaj klasę - Admin</title>{% endblock %}
+{% block title %}Dodaj klasę - Admin{% endblock %}
 
 {% block body %}
     <form action="{{path('ClassSaveAddAdmin')}}" class="m-4" method="POST">
