--- a/app/markusApacheDrive/markus/templates/admin/schoolClassEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/schoolClassEdit.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Edytuj klasę - Admin</title>{% endblock %}
+{% block title %}Edytuj klasę - Admin{% endblock %}
 
 {% block body %}
     <form action="{{path('ClassEditSaveAdmin',{id:id})}}" class="m-4" method="POST">
