--- a/app/markusApacheDrive/markus/templates/admin/schoolSubject.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/schoolSubject.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Przedmiot - Strona Główna - Admin</title>{% endblock %}
+{% block title %}Przedmiot - Strona Główna - Admin{% endblock %}
 
 {% block body %}
 <div class="m-4"><a href="{{path('SubjectAddAdmin')}}"><button class="btn btn-success">Dodaj Przedmiot</button></a></div>
