--- a/app/markusApacheDrive/markus/templates/admin/schoolSubjectAdd.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/schoolSubjectAdd.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Dodaj przedmiot - Admin</title>{% endblock %}
+{% block title %}Dodaj przedmiot - Admin{% endblock %}
 
 {% block body %}
     <form action="{{path('SubjectAddSaveAdmin')}}" class="m-4" method="POST">
