--- a/app/markusApacheDrive/markus/templates/admin/studentEditPerson.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/studentEditPerson.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Edytuj studenta - Admin</title>{% endblock %}
+{% block title %}Edytuj studenta - Admin{% endblock %}
 
 {% block body %}
     <form action="{{path('StudentSaveAdmin',{id})}}" class="m-4" method="POST">
