--- a/app/markusApacheDrive/markus/templates/admin/teacherAdd.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/teacherAdd.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Dodaj nauczyciela - Admin</title>{% endblock %}
+{% block title %}Dodaj nauczyciela - Admin{% endblock %}
 
 {% block body %}
     <form action="{{path('TeacherAddSaveAdmin')}}" class="m-4" method="POST">
