--- a/app/markusApacheDrive/markus/templates/teacher/absence.html.twig
+++ b/app/markusApacheDrive/markus/templates/teacher/absence.html.twig
@@ -1,5 +1,5 @@
 {% extends "teacher/base.index.twig" %}
-{% block title %}<title>Nieocecnośći - wybór klasy - Nauczyciel</title>{% endblock %}
+{% block title %}Nieocecnośći - wybór klasy - Nauczyciel{% endblock %}
 {% block body %}
     <table class="table">
         <tr><th>Lp.</th><th>Klasa</th><th>#</th><th>#</th></tr>
