--- a/app/markusApacheDrive/markus/templates/teacher/index.html.twig
+++ b/app/markusApacheDrive/markus/templates/teacher/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "teacher/base.index.twig" %}
 
-{% block title %}<title>Strona Główna - Nauczyciel</title>{% endblock %}
+{% block title %}Strona Główna - Nauczyciel{% endblock %}
 
 {% block body %}
 <h2> Cześć Nauczycielu: {{user.name}} {{user.surname}}</h2>
