--- a/app/markusApacheDrive/markus/templates/teacher/marksClass.twig
+++ b/app/markusApacheDrive/markus/templates/teacher/marksClass.twig
@@ -1,6 +1,6 @@
 {% extends "teacher/base.index.twig" %}
 
-{% block title %}<title>Oceny - wybór klasy - Nauczyciel</title>{% endblock %}
+{% block title %}Oceny - wybór klasy - Nauczyciel{% endblock %}
 
 {% block body %}
     <table class="table">
