--- a/app/markusApacheDrive/markus/templates/admin/absence.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/absence.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Nieocecnośći - wybór klasy - Admin</title>{% endblock %}
+{% block title %}Nieocecnośći - wybór klasy - Admin{% endblock %}
 
 {% block body %}
     <table class="table">
