--- a/app/markusApacheDrive/markus/templates/admin/index.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Strona Główna - Admin</title>{% endblock %}
+{% block title %}Strona Główna - Admin{% endblock %}
 
 {% block body %}
 <h2> Cześć Adminie: </h2>
