--- a/app/markusApacheDrive/markus/templates/admin/marks.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/marks.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Oceny - wybór klasy - Admin</title>{% endblock %}
+{% block title %}Oceny - wybór klasy - Admin{% endblock %}
 
 {% block body %}
 <table class="table">
