--- a/app/markusApacheDrive/markus/templates/admin/schoolSubjectEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/schoolSubjectEdit.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Edytuj Przedmiot - Admin</title>{% endblock %}
+{% block title %}Edytuj Przedmiot - Admin{% endblock %}
 
 {% block body %}
     <form action="{{path('SubjectSaveAdmin',{id})}}" class="m-4" method="POST">
