--- a/app/markusApacheDrive/markus/templates/admin/studentAdd.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/studentAdd.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Dodaj studenta - Admin</title>{% endblock %}
+{% block title %}Dodaj studenta - Admin{% endblock %}
 
 {% block body %}
     <form action="{{path('StudentAddSaveAdmin')}}" class="m-4" method="POST">
