--- a/app/markusApacheDrive/markus/templates/admin/studentEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/studentEdit.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Student - Strona Główna - Admin</title>{% endblock %}
+{% block title %}Student - Strona Główna - Admin{% endblock %}
 
 {% block body %}
 <div class="m-4"><a href="{{path('StudentAddAdmin')}}"><button class="btn">Dodaj Studenta</button></a></div>
