--- a/app/markusApacheDrive/markus/templates/admin/teacherEdit.html.twig
+++ b/app/markusApacheDrive/markus/templates/admin/teacherEdit.html.twig
@@ -1,6 +1,6 @@
 {% extends "admin/base.html.twig" %}
 
-{% block title %}<title>Nauczyciel - Strona Główna- Admin</title>{% endblock %}
+{% block title %}Nauczyciel - Strona Główna- Admin{% endblock %}
 
 {% block body %}
 <div class="m-4"><a href="{{path('TeacherAddAdmin')}}"><button class="btn">Dodaj Nauczyciela</button></a></div>
